newclay/test/Compiler/StaticEvaluator/Fail/Redefinition2/main.clay
private define Main;
public define Main;
